# chains

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
chains/: __init__.py  env.py
chains/core/: env.py  graph.py  initializers.py  metrics.py  node_factory.py  ops.py  ops_activation.py  ops_arithmetic.py  ops_conv.py  ops_fully_connected.py  ops_losses.py  ops_mat.py  ops_nn.py  ops_norm.py  ops_pooling.py  ops_regularization.py  optimizers.py  preprocessing.py  saver.py  shape.py  static_shape.py  tensor.py  utils_broadcasting.py  utils_conv.py  utils_permutation.py
chains/front/: model.py  network.py  training.py
chains/graph/: node_factory.py  structure.py
chains/initialization/: variable_initializers.py
chains/layers/: fully_connected.py
chains/model/: model.py  network.py  training.py
chains/operations/: activation_ops.py  arithmetic_ops.py  base_ops.py  broadcasting_utils.py  losses_ops.py  mat_ops.py  regularization_ops.py
chains/optimizer/: gradient_descent.py
chains/preprocessing/: inputs.py
chains/tensor/: tensor.py
chains/tools/: backup.py
chains/utils/: naming.py  validate.py
coursera/: utils.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/chains/: __init__.py
tests/: test_chains.py  test_graph.py  test_quadratic.py
tests/conv/: filter_utils_test.py  layer_test.py  test_filter_utils.py  test_layer.py
(+82 files in other folders)
