[tool.poetry]
name = "chains"
version = "0.1.0"
description = "Simple DeepLearning library created for teaching purpose"
authors = ["Jean-Luc Thirion <thirion.jl@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "chains", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
h5py = "^3.7.0"
numpy = "1.23.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
tensorflow = "^2.11.0"

[tool.poetry.group.coursera.dependencies]
matplotlib = "^3.6.2"
Pillow = "^9.3.0"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
daz = "^0"
# black = {version = "^22.10.0", allow-prereleases = true}
# mypy = "^0.991"
# scikit-learn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
